Создано с помощью Colaboratory

--- a/turtle.ipynb
+++ b/turtle.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPCBn38vQNllyBnr3l3HzX",
+      "authorship_tag": "ABX9TyPxqiCRHfoYBCbPghRalv8l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,20 +35,28 @@
       "outputs": [],
       "source": [
         "import turtle\n",
+        "from turtle import bgcolor\n",
         "\n",
-        "t = turtle.Turtle()\n",
-        "t.color(\"blue\")\n",
-        "t.speed(1)\n",
+        "bgcolor(\"black\")\n",
+        "\n",
+        "t1 = turtle.Turtle()\n",
+        "t1.color(\"red\")\n",
+        "t1.speed(20)\n",
+        "\n",
+        "t2 = turtle.Turtle()\n",
+        "t2.color(\"blue\")\n",
+        "t2.speed(20)\n",
         "\n",
         "\n",
-        "def draw_side():\n",
-        "    t.forward(90)\n",
-        "    t.right(90)\n",
+        "def draw_circle():\n",
+        "    for a in range(12):\n",
+        "        t1.circle(70)\n",
+        "        t1.left(30)\n",
+        "        t2.circle(80)\n",
+        "        t2.left(30)\n",
         "\n",
         "\n",
-        "for i in range(4):\n",
-        "    draw_side()\n",
-        "\n",
+        "draw_circle()\n",
         "turtle.mainloop()"
       ]
     }
