--- a/cubes.ipynb
+++ b/cubes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7piraEN1k+bURZZ0Tf+Ux",
+      "authorship_tag": "ABX9TyNDfMy+ssZ+Le8Mv9aQ3MNw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,38 +28,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 109,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8G_kfvQuJ-DJ",
-        "outputId": "59015557-cc7e-4c0f-88fe-cad3f07d8057"
+        "outputId": "cc863965-ca50-4ab8-f837-a95ab940ed62"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.11\n",
-            "0.13\n",
-            "0.16666666666666666\n"
+            "0.02783\n",
+            "0.027560666666666667\n",
+            "0.027777777777777776\n"
           ]
         }
       ],
       "source": [
         "import random\n",
+        "import numpy as np\n",
         "\n",
         "generator1 = lambda: random.randint(1, 6)\n",
         "generator2 = lambda: random.randint(1, 6)\n",
         "\n",
         "counts_33 = [sum(1 for _ in range(100) if (generator1(), generator2()) == (3, 3)) for _ in range(15000)]\n",
-        "print(max(counts_33) / 100)\n",
+        "print(np.mean(counts_33) / 100)\n",
         "\n",
         "counts_61 = [sum(1 for _ in range(100) if (generator1(), generator2()) == (6, 1)) for _ in range(15000)]\n",
-        "print(max(counts_61) / 100)\n",
+        "print(np.mean(counts_61) / 100)\n",
         "\n",
-        "print(6.0 / 36.0)"
+        "print(1.0 / 36.0)"
       ]
     }
   ]
