Создано с помощью Colaboratory

--- a/random_buttons.ipynb
+++ b/random_buttons.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNB29wQkKqyn55/lJKQ60ME",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,37 +27,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9pFb2QgMvCcP",
-        "outputId": "79e755f6-5c47-436d-e6b5-a699b4b7079a"
+        "outputId": "cb4ee05b-f53f-4af0-c4ef-9980bd67ab3f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n"
+            "0.0014006666666666668\n",
+            "0.0013753333333333334\n",
+            "0.001364\n",
+            "0.008333333333333333\n"
           ]
         }
       ],
       "source": [
         "import random\n",
+        "import numpy as np\n",
         "\n",
-        "def simulate_doorbell_presses():\n",
-        "    buttons = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-        "    open = [1, 2, 3]\n",
-        "    successful_attempts = 0\n",
+        "def doorbell_press(buttons, open):\n",
+        "  random_buttons = lambda: random.sample(buttons, 3)\n",
+        "  doorbell_presses = [sum(1 for _ in range(100) if random_buttons() == open) for _ in range(15000)]\n",
+        "  return np.mean(doorbell_presses) / 100\n",
         "\n",
-        "    for _ in range(100):\n",
-        "        random_buttons = random.sample(buttons, 3)\n",
-        "        if random_buttons == open:\n",
-        "            successful_attempts+=1\n",
-        "    print(successful_attempts)\n",
-        "simulate_doorbell_presses()"
+        "buttons = range(10)\n",
+        "open1 = [1, 2, 3]\n",
+        "open2 = [9, 8, 4]\n",
+        "open3 = [7, 1, 2]\n",
+        "\n",
+        "print(doorbell_press(buttons, open1))\n",
+        "print(doorbell_press(buttons, open2))\n",
+        "print(doorbell_press(buttons, open3))\n",
+        "\n",
+        "print(1.0 / 120.0)"
       ]
     }
   ]
