Создано с помощью Colaboratory

--- a/random_buttons.ipynb
+++ b/random_buttons.ipynb
@@ -27,22 +27,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9pFb2QgMvCcP",
-        "outputId": "cb4ee05b-f53f-4af0-c4ef-9980bd67ab3f"
+        "outputId": "65ecca30-691e-4be5-c26a-a6815172c911"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.0014006666666666668\n",
-            "0.0013753333333333334\n",
-            "0.001364\n",
+            "0.0014099999999999998\n",
+            "0.001396\n",
+            "0.001424\n",
+            "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
             "0.008333333333333333\n"
           ]
         }
@@ -53,7 +54,7 @@
         "\n",
         "def doorbell_press(buttons, open):\n",
         "  random_buttons = lambda: random.sample(buttons, 3)\n",
-        "  doorbell_presses = [sum(1 for _ in range(100) if random_buttons() == open) for _ in range(15000)]\n",
+        "  doorbell_presses = [sum(1 for _ in range(100) if random_buttons() == open) for _ in range(20000)]\n",
         "  return np.mean(doorbell_presses) / 100\n",
         "\n",
         "buttons = range(10)\n",
@@ -65,6 +66,7 @@
         "print(doorbell_press(buttons, open2))\n",
         "print(doorbell_press(buttons, open3))\n",
         "\n",
+        "print(list(buttons))\n",
         "print(1.0 / 120.0)"
       ]
     }
