--- a/fastapi.ipynb
+++ b/fastapi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdb+4XIFAyXa3YMIeWFQN9",
+      "authorship_tag": "ABX9TyPcspyyosGsolyhEW3XKlvD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,65 +28,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
+        "id": "P1aiWbdLLYkT"
+      },
+      "outputs": [],
+      "source": [
+        "!pip install fastapi nest-asyncio pyngrok uvicorn"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ngrok config add-authtoken $(cat token)"
+      ],
+      "metadata": {
+        "id": "_1oK_kuaAc0V",
+        "outputId": "065170cc-99c1-4e26-b0be-472a7cd15c52",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "P1aiWbdLLYkT",
-        "outputId": "0bde57cb-7c4a-401a-e089-f7a2a0ff8d60"
+        }
       },
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting fastapi\n",
-            "  Downloading fastapi-0.104.1-py3-none-any.whl (92 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/92.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m92.2/92.9 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m92.9/92.9 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: nest-asyncio in /usr/local/lib/python3.10/dist-packages (1.5.8)\n",
-            "Collecting pyngrok\n",
-            "  Downloading pyngrok-7.0.0.tar.gz (718 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m718.7/718.7 kB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting uvicorn\n",
-            "  Downloading uvicorn-0.23.2-py3-none-any.whl (59 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.5/59.5 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: anyio<4.0.0,>=3.7.1 in /usr/local/lib/python3.10/dist-packages (from fastapi) (3.7.1)\n",
-            "Requirement already satisfied: pydantic!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0,>=1.7.4 in /usr/local/lib/python3.10/dist-packages (from fastapi) (1.10.13)\n",
-            "Collecting starlette<0.28.0,>=0.27.0 (from fastapi)\n",
-            "  Downloading starlette-0.27.0-py3-none-any.whl (66 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m67.0/67.0 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting typing-extensions>=4.8.0 (from fastapi)\n",
-            "  Downloading typing_extensions-4.8.0-py3-none-any.whl (31 kB)\n",
-            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.10/dist-packages (from pyngrok) (6.0.1)\n",
-            "Requirement already satisfied: click>=7.0 in /usr/local/lib/python3.10/dist-packages (from uvicorn) (8.1.7)\n",
-            "Collecting h11>=0.8 (from uvicorn)\n",
-            "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<4.0.0,>=3.7.1->fastapi) (3.4)\n",
-            "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.10/dist-packages (from anyio<4.0.0,>=3.7.1->fastapi) (1.3.0)\n",
-            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<4.0.0,>=3.7.1->fastapi) (1.1.3)\n",
-            "Building wheels for collected packages: pyngrok\n",
-            "  Building wheel for pyngrok (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyngrok: filename=pyngrok-7.0.0-py3-none-any.whl size=21129 sha256=2ff8a807e2d9fd53730e6cd1f1eb14fcf16f4e456480b8e7c36b16232ec23b8a\n",
-            "  Stored in directory: /root/.cache/pip/wheels/60/29/7b/f64332aa7e5e88fbd56d4002185ae22dcdc83b35b3d1c2cbf5\n",
-            "Successfully built pyngrok\n",
-            "Installing collected packages: typing-extensions, pyngrok, h11, uvicorn, starlette, fastapi\n",
-            "  Attempting uninstall: typing-extensions\n",
-            "    Found existing installation: typing_extensions 4.5.0\n",
-            "    Uninstalling typing_extensions-4.5.0:\n",
-            "      Successfully uninstalled typing_extensions-4.5.0\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "lida 0.0.10 requires kaleido, which is not installed.\n",
-            "lida 0.0.10 requires python-multipart, which is not installed.\n",
-            "tensorflow-probability 0.22.0 requires typing-extensions<4.6.0, but you have typing-extensions 4.8.0 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed fastapi-0.104.1 h11-0.14.0 pyngrok-7.0.0 starlette-0.27.0 typing-extensions-4.8.0 uvicorn-0.23.2\n"
+            "Authtoken saved to configuration file: /root/.config/ngrok/ngrok.yml\n"
           ]
         }
-      ],
-      "source": [
-        "!pip install fastapi nest-asyncio pyngrok uvicorn"
       ]
     },
     {
@@ -103,7 +74,7 @@
       "metadata": {
         "id": "4L4OcO1LLrJg"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -123,21 +94,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wSK_4ut1Lw01",
-        "outputId": "53c451d9-9b9f-49a0-b292-b6c407bb9832"
+        "outputId": "e2103082-a42b-4490-a60c-c6b4315beae2"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": []
-        },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "WARNING:pyngrok.process.ngrok:t=2023-10-30T21:44:27+0000 lvl=warn msg=\"ngrok config file found at legacy location, move to XDG location\" xdg_path=/root/.config/ngrok/ngrok.yml legacy_path=/root/.ngrok2/ngrok.yml\n",
-            "INFO:     Started server process [160]\n",
+            "INFO:     Started server process [569]\n",
             "INFO:     Waiting for application startup.\n",
             "INFO:     Application startup complete.\n",
             "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
@@ -147,10 +112,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Public URL: https://6a28-34-16-168-183.ngrok.io\n",
-            "INFO:     51.89.157.175:0 - \"GET / HTTP/1.1\" 200 OK\n",
-            "INFO:     51.89.157.175:0 - \"GET /favicon.ico HTTP/1.1\" 404 Not Found\n",
-            "INFO:     51.89.157.175:0 - \"GET / HTTP/1.1\" 200 OK\n"
+            "Public URL: https://51a7-34-125-1-34.ngrok-free.app\n",
+            "INFO:     176.9.113.53:0 - \"GET / HTTP/1.1\" 200 OK\n",
+            "INFO:     176.9.113.53:0 - \"GET /favicon.ico HTTP/1.1\" 404 Not Found\n"
           ]
         },
         {
@@ -160,7 +124,7 @@
             "INFO:     Shutting down\n",
             "INFO:     Waiting for application shutdown.\n",
             "INFO:     Application shutdown complete.\n",
-            "INFO:     Finished server process [160]\n"
+            "INFO:     Finished server process [569]\n"
           ]
         }
       ]
