Создано с помощью Colaboratory

--- a/django.ipynb
+++ b/django.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHJ99hDMFG8czN1bmRWMbD",
+      "authorship_tag": "ABX9TyNpo0lXkfH4pvWl0dFZdZ9y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "Iocqente15V2"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -58,18 +58,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H2AYTsZb6WI1",
-        "outputId": "f0e642b7-03a2-47dd-889f-ed79885fcbbf"
+        "outputId": "d24154c8-bc95-4549-b819-509bbff29839"
       },
-      "execution_count": 27,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Authtoken saved to configuration file: /root/.ngrok2/ngrok.yml\n"
+            "Authtoken saved to configuration file: /root/.config/ngrok/ngrok.yml\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!sed -i \"s/ALLOWED_HOSTS = \\[\\]/ALLOWED_HOSTS = \\['*'\\]/\" mysite/mysite/settings.py"
+      ],
+      "metadata": {
+        "id": "-go1lKoQEHVw"
+      },
+      "execution_count": 16,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -91,34 +102,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J9JpsYs95RSv",
-        "outputId": "a2ea83f3-6f71-4cf8-bcc8-cdf790ec9112"
+        "outputId": "bedfa071-642b-474b-ad12-8dba422b161e"
       },
-      "execution_count": 28,
+      "execution_count": 17,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:pyngrok.process.ngrok:t=2023-10-30T23:29:53+0000 lvl=warn msg=\"ngrok config file found at legacy location, move to XDG location\" xdg_path=/root/.config/ngrok/ngrok.yml legacy_path=/root/.ngrok2/ngrok.yml\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Public URL: https://e8ba-35-245-84-159.ngrok-free.app\n",
+            "Public URL: https://d5bb-34-125-130-64.ngrok-free.app\n",
             "Watching for file changes with StatReloader\n",
             "Performing system checks...\n",
             "\n",
             "System check identified no issues (0 silenced).\n",
-            "October 30, 2023 - 23:29:54\n",
-            "Django version 4.2.6, using settings 'mysite.settings'\n",
+            "\u001b[31m\n",
+            "You have 18 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.\u001b[0m\n",
+            "\u001b[31mRun 'python manage.py migrate' to apply them.\u001b[0m\n",
+            "March 07, 2024 - 22:46:45\n",
+            "Django version 5.0.3, using settings 'mysite.settings'\n",
             "Starting development server at http://0.0.0.0:8000/\n",
             "Quit the server with CONTROL-C.\n",
             "\n",
-            "[30/Oct/2023 23:30:00] \u001b[m\"GET / HTTP/1.1\" 200 10664\u001b[0m\n",
+            "[07/Mar/2024 22:46:51] \u001b[m\"GET / HTTP/1.1\" 200 10629\u001b[0m\n",
             "Not Found: /favicon.ico\n",
-            "[30/Oct/2023 23:30:01] \u001b[33m\"GET /favicon.ico HTTP/1.1\" 404 2129\u001b[0m\n"
+            "[07/Mar/2024 22:46:51] \u001b[33m\"GET /favicon.ico HTTP/1.1\" 404 2129\u001b[0m\n"
           ]
         }
       ]
