Создано с помощью Colaboratory

--- a/flask_jquery.ipynb
+++ b/flask_jquery.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMS0SzW5WcNVqOLquiL4d/A",
+      "authorship_tag": "ABX9TyMK7e1EW7EE8B/QrK0VlJPZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,21 +28,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
         "id": "Lc8tF1ahHYsI",
-        "outputId": "27b1cced-f9d7-4f26-9474-21d7f04910be"
+        "outputId": "67173127-f267-4f8d-a98b-82f8249c473c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "https://v15445ft1f-496ff2e9c6d22116-5000-colab.googleusercontent.com/\n"
+            "https://wbmc39nue2-496ff2e9c6d22116-5000-colab.googleusercontent.com/\n"
           ]
         }
       ],
@@ -56,10 +56,10 @@
       "source": [
         "import os\n",
         "\n",
-        "os.mkdir(\"templates\")\n",
+        "if not os.path.exists(\"templates\"):\n",
+        "    os.mkdir(\"templates\")\n",
         "\n",
-        "page = \"\"\"\n",
-        "<!DOCTYPE html>\n",
+        "page = \"\"\"<!DOCTYPE html>\n",
         "<html lang=\"en\">\n",
         "<head>\n",
         "<meta charset=\"UTF-8\">\n",
@@ -69,7 +69,6 @@
         "<body>\n",
         "<button id=\"sendData\">Отправить данные</button>\n",
         "<div id=\"result\">awawdawdawd</div>\n",
-        "\n",
         "<script>\n",
         "$(document).ready(function() {\n",
         "  $(\"#sendData\").click(function() {\n",
@@ -89,12 +88,12 @@
         "\"\"\"\n",
         "\n",
         "with open('templates/index.html', 'w') as f:\n",
-        "  f.write(page)"
+        "    f.write(page)"
       ],
       "metadata": {
         "id": "edOMWh3zXvvE"
       },
-      "execution_count": 79,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -110,7 +109,6 @@
         "def home():\n",
         "    return render_template('index.html')\n",
         "\n",
-        "\n",
         "@app.route('/process_data', methods=['POST'])\n",
         "def process_data():\n",
         "    data = request.form['data']\n",
@@ -124,9 +122,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5_DZo2AhI0eB",
-        "outputId": "3dbd4c1e-09d1-4038-c2ac-5dff1c55b668"
+        "outputId": "e6cc1662-6599-4179-e000-bda1e2b740a1"
       },
-      "execution_count": 80,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,9 +141,9 @@
             "INFO:werkzeug:\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
             " * Running on http://127.0.0.1:5000\n",
             "INFO:werkzeug:\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-            "INFO:werkzeug:127.0.0.1 - - [08/Mar/2024 00:08:02] \"GET / HTTP/1.1\" 200 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [08/Mar/2024 00:08:03] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [08/Mar/2024 00:08:04] \"POST /process_data HTTP/1.1\" 200 -\n"
+            "INFO:werkzeug:127.0.0.1 - - [08/Mar/2024 00:16:00] \"GET / HTTP/1.1\" 200 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [08/Mar/2024 00:16:00] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+            "INFO:werkzeug:127.0.0.1 - - [08/Mar/2024 00:16:04] \"POST /process_data HTTP/1.1\" 200 -\n"
           ]
         }
       ]
