Создано с помощью Colaboratory

--- a/asyncio_threading_multiprocessing.ipynb
+++ b/asyncio_threading_multiprocessing.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUiHKFEMKnzFHa6SpsoGsS",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOVpOp5Txz3ttSqYRgde5s9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -34,27 +36,28 @@
       "metadata": {
         "id": "V23zP8Fjkcc9"
       },
-      "execution_count": 20,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nj4Vjfqwffhq",
-        "outputId": "4a72ffcc-d54b-4a3c-e5a9-aae4fa9ea12c"
+        "outputId": "741c2722-6963-4503-fea9-bf4f5a7e08d8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Время заполнения массива: 0.050765 сек.\n",
-            "Время вычисления суммы: 0.006530 сек.\n",
-            "Сумма элементов массива: 1000000\n"
+            "Время заполнения массива: 17.021941 секунд\n",
+            "Время вычисления суммы: 0.084787 секунд\n",
+            "Общее время: 17.106790 секунд\n",
+            "Сумма элементов массива: 505085887\n"
           ]
         }
       ],
@@ -64,7 +67,7 @@
         "\n",
         "# Заполнение массива\n",
         "start_time = time.time()\n",
-        "arr = [1 for _ in range(1000000)]\n",
+        "arr = [n() for _ in range(10000000)]\n",
         "end_time = time.time()\n",
         "\n",
         "# Вычисление суммы\n",
@@ -73,9 +76,10 @@
         "end_sum_time = time.time()\n",
         "\n",
         "# Вывод времени выполнения\n",
-        "print(f\"Время заполнения массива: {end_time - start_time:.6f} сек.\")\n",
-        "print(f\"Время вычисления суммы: {end_sum_time - sum_time:.6f} сек.\")\n",
-        "print(f\"Сумма элементов массива: {sum_arr}\")\n"
+        "print(f\"Время заполнения массива: {end_time - start_time:.6f} секунд\")\n",
+        "print(f\"Время вычисления суммы: {end_sum_time - sum_time:.6f} секунд\")\n",
+        "print(f\"Общее время: {end_sum_time - start_time:.6f} секунд\")\n",
+        "print(f\"Сумма элементов массива: {sum_arr}\")"
       ]
     },
     {
@@ -88,23 +92,23 @@
         "# Функция для заполнения части массива случайными числами\n",
         "def fill_array_part(arr, start, end):\n",
         "    for i in range(start, end):\n",
-        "        arr[i] = 1\n",
+        "        arr[i] = n()\n",
         "\n",
         "# Функция для вычисления суммы части массива\n",
         "def calculate_sum(arr, start, end, result):\n",
         "    partial_sum = sum(arr[start:end])\n",
         "    result.append(partial_sum)\n",
         "\n",
-        "# Создаем пустой массив из 1000000 элементов\n",
-        "arr = [0] * 1000000\n",
+        "# Создаем пустой массив из 10000000 элементов\n",
+        "arr = [0] * 10000000\n",
         "\n",
-        "# Разделяем массив на 10 частей\n",
-        "chunk_size = len(arr) // 10\n",
+        "# Разделяем массив на 50 частей\n",
+        "chunk_size = len(arr) // 50\n",
         "\n",
         "# Создаем и запускаем потоки для заполнения массива\n",
         "fill_threads = []\n",
         "start_time_fill = time.time()\n",
-        "for i in range(10):\n",
+        "for i in range(50):\n",
         "    thread = threading.Thread(target=fill_array_part, args=(arr, i*chunk_size, (i+1)*chunk_size))\n",
         "    fill_threads.append(thread)\n",
         "    thread.start()\n",
@@ -119,7 +123,7 @@
         "sum_threads = []\n",
         "results = []\n",
         "start_time_sum = time.time()\n",
-        "for i in range(10):\n",
+        "for i in range(50):\n",
         "    thread = threading.Thread(target=calculate_sum, args=(arr, i*chunk_size, (i+1)*chunk_size, results))\n",
         "    sum_threads.append(thread)\n",
         "    thread.start()\n",
@@ -132,8 +136,9 @@
         "\n",
         "total_sum = sum(results)\n",
         "\n",
-        "print(f\"Время заполнения массива: {end_time_fill - start_time_fill} секунд\")\n",
-        "print(f\"Время вычисления суммы: {end_time_sum - start_time_sum} секунд\")\n",
+        "print(f\"Время заполнения массива: {end_time_fill - start_time_fill:.6f} секунд\")\n",
+        "print(f\"Время вычисления суммы: {end_time_sum - start_time_sum:.6f} секунд\")\n",
+        "print(f\"Общее время: {end_time_sum - start_time_fill:.6f} секунд\")\n",
         "print(f\"Сумма элементов массива: {total_sum}\")"
       ],
       "metadata": {
@@ -141,17 +146,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KfZX03iGikib",
-        "outputId": "aaca22f6-4554-4f66-b35b-3911810714c6"
+        "outputId": "b47426b6-14f4-4b6e-d306-752761e0a4cc"
       },
-      "execution_count": 55,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Время заполнения массива: 0.062272071838378906 секунд\n",
-            "Время вычисления суммы: 0.02977156639099121 секунд\n",
-            "Сумма элементов массива: 1000000\n"
+            "Время заполнения массива: 10.739222 секунд\n",
+            "Время вычисления суммы: 0.080570 секунд\n",
+            "Общее время: 10.819906 секунд\n",
+            "Сумма элементов массива: 504994925\n"
           ]
         }
       ]
@@ -166,15 +172,15 @@
         "# Функция для заполнения части массива случайными числами\n",
         "def fill_array_part(arr, start, end):\n",
         "    for i in range(start, end):\n",
-        "        arr[i] = 1\n",
+        "        arr[i] = n()\n",
         "\n",
         "# Функция для вычисления суммы части массива\n",
         "def calculate_sum(arr, start, end, result):\n",
         "    partial_sum = sum(arr[start:end])\n",
         "    result.put(partial_sum)\n",
         "\n",
-        "# Создаем пустой массив из 1000000 элементов\n",
-        "arr = multiprocessing.Array('i', [0]*1000000)\n",
+        "# Создаем пустой массив из 10000000 элементов\n",
+        "arr = multiprocessing.Array('i', [0]*10000000)\n",
         "\n",
         "# Разделяем массив на 10 частей\n",
         "chunk_size = len(arr) // 10\n",
@@ -212,8 +218,9 @@
         "while not results.empty():\n",
         "    total_sum += results.get()\n",
         "\n",
-        "print(f\"Время заполнения: {end_time_fill - start_time_fill} секунд\")\n",
-        "print(f\"Время вычисления суммы: {end_time_sum - start_time_sum} секунд\")\n",
+        "print(f\"Время заполнения массива: {end_time_fill - start_time_fill:.6f} секунд\")\n",
+        "print(f\"Время вычисления суммы: {end_time_sum - start_time_sum:.6f} секунд\")\n",
+        "print(f\"Общее время: {end_time_sum - start_time_fill:.6f} секунд\")\n",
         "print(f\"Сумма элементов массива: {total_sum}\")"
       ],
       "metadata": {
@@ -221,17 +228,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DWZR1DI8k7yO",
-        "outputId": "5f710db4-2525-421a-a363-6549504add54"
+        "outputId": "50739491-8c40-49b1-fa68-116163fe4083"
       },
-      "execution_count": 56,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Время заполнения: 1.5937047004699707 секунд\n",
-            "Время вычисления суммы: 0.2033991813659668 секунд\n",
-            "Сумма элементов массива: 1000000\n"
+            "Время заполнения массива: 21.569410 секунд\n",
+            "Время вычисления суммы: 0.407834 секунд\n",
+            "Общее время: 21.977830 секунд\n",
+            "Сумма элементов массива: 505024836\n"
           ]
         }
       ]
@@ -246,17 +254,17 @@
         "# Функция для заполнения части массива случайными числами\n",
         "async def fill_array_part(arr, start, end):\n",
         "    for i in range(start, end):\n",
-        "        arr[i] = 1\n",
+        "        arr[i] = n()\n",
         "\n",
         "# Функция для вычисления суммы части массива\n",
         "async def calculate_sum(arr, start, end):\n",
         "    return sum(arr[start:end])\n",
         "\n",
         "async def main():\n",
-        "    # Создаем пустой массив из 1000000 элементов\n",
-        "    arr = [0]*1000000\n",
+        "    # Создаем пустой массив из 10000000 элементов\n",
+        "    arr = [0]*10000000\n",
         "\n",
-        "    # Разделяем массив на 10 частей\n",
+        "    # Разделяем массив на 2 части\n",
         "    chunk_size = len(arr) // 10\n",
         "\n",
         "    # Запускаем асинхронные задачи для заполнения массива\n",
@@ -281,8 +289,9 @@
         "\n",
         "    total_sum = sum(partial_sums)\n",
         "\n",
-        "    print(f\"Время заполнения: {end_time_fill - start_time_fill} секунд\")\n",
-        "    print(f\"Время вычисления суммы: {end_time_sum - start_time_sum} секунд\")\n",
+        "    print(f\"Время заполнения: {end_time_fill - start_time_fill:.6f} секунд\")\n",
+        "    print(f\"Время вычисления суммы: {end_time_sum - start_time_sum:.6f} секунд\")\n",
+        "    print(f\"Общее время: {end_time_sum - start_time_fill:.6f} секунд\")\n",
         "    print(f\"Сумма элементов массива: {total_sum}\")\n",
         "\n",
         "\n",
@@ -293,17 +302,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZqmjU61nmqqB",
-        "outputId": "aedb769e-cbf6-4425-fd5d-2ed751ad28bf"
+        "outputId": "16fae6f0-6bbe-4d18-813f-bd7369d4dc8d"
       },
-      "execution_count": 57,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Время заполнения: 0.059159278869628906 секунд\n",
-            "Время вычисления суммы: 0.011265039443969727 секунд\n",
-            "Сумма элементов массива: 1000000\n"
+            "Время заполнения: 8.921092 секунд\n",
+            "Время вычисления суммы: 0.071392 секунд\n",
+            "Общее время: 8.992484 секунд\n",
+            "Сумма элементов массива: 504878203\n"
           ]
         }
       ]
