Создано с помощью Colaboratory

--- a/asyncio_threading_multiprocessing.ipynb
+++ b/asyncio_threading_multiprocessing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOVpOp5Txz3ttSqYRgde5s9",
+      "authorship_tag": "ABX9TyOITKsXMM5sK4vgtZexTkeV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,17 +27,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/InowaR/colab/blob/main/asyncio_threading_multiprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "n = lambda: random.randint(1, 100)"
-      ],
-      "metadata": {
-        "id": "V23zP8Fjkcc9"
-      },
-      "execution_count": 1,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -67,7 +56,7 @@
         "\n",
         "# Заполнение массива\n",
         "start_time = time.time()\n",
-        "arr = [n() for _ in range(10000000)]\n",
+        "arr = [random.randint(1, 100) for _ in range(10000000)]\n",
         "end_time = time.time()\n",
         "\n",
         "# Вычисление суммы\n",
@@ -92,7 +81,7 @@
         "# Функция для заполнения части массива случайными числами\n",
         "def fill_array_part(arr, start, end):\n",
         "    for i in range(start, end):\n",
-        "        arr[i] = n()\n",
+        "        arr[i] = random.randint(1, 100)\n",
         "\n",
         "# Функция для вычисления суммы части массива\n",
         "def calculate_sum(arr, start, end, result):\n",
@@ -172,7 +161,7 @@
         "# Функция для заполнения части массива случайными числами\n",
         "def fill_array_part(arr, start, end):\n",
         "    for i in range(start, end):\n",
-        "        arr[i] = n()\n",
+        "        arr[i] = random.randint(1, 100)\n",
         "\n",
         "# Функция для вычисления суммы части массива\n",
         "def calculate_sum(arr, start, end, result):\n",
@@ -254,7 +243,7 @@
         "# Функция для заполнения части массива случайными числами\n",
         "async def fill_array_part(arr, start, end):\n",
         "    for i in range(start, end):\n",
-        "        arr[i] = n()\n",
+        "        arr[i] = random.randint(1, 100)\n",
         "\n",
         "# Функция для вычисления суммы части массива\n",
         "async def calculate_sum(arr, start, end):\n",
